<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_home"
        android:title="@string/menu_drawer_home"
        android:icon="@drawable/icon_home"/>

    <item android:id="@+id/nav_account"
        android:title="@string/menu_drawer_perfil"
        android:icon="@drawable/icon_usuario"/>

    <item android:id="@+id/nav_register_category"
        android:title="@string/menu_drawer_cadastro_categoria"
        android:icon="@drawable/icon_categoria"/>

    <item android:id="@+id/nav_register_item"
        android:title="@string/menu_drawer_registrar_item"
        android:icon="@drawable/icon_item"/>

    <item android:id="@+id/nav_sair"
        android:title="@string/menu_drawer_sair"
        android:icon="@drawable/icon_logout"/>

</menu>